--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Bienvenido Git Hub</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat iusto, sunt aliquam ullam consequatur natus quasi maiores reprehenderit repudiandae at?</p>
     
 </body>
 </html>
