--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <h1>Bienvenido Git Hub</h1>
-    
+    <ul>
+        <li><a href="inicio"></a></li>
+        <li><a href="contacto"></a></li>
+        <li><a href="ubicacio"></a></li>
+        <li><a href="formulario"></a></li>
+    </ul>
     
 </body>
 </html>
