--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <li><a href="ubicacio"></a></li>
         <li><a href="formulario"></a></li>
     </ul>
-    
+    <section>
+        <h4>nuevos cambios</h4>
+    </section>
 </body>
 </html>
